I fixed it! (Include ignore_index arg in pd.concat)
Added "ignore_index=True" param to pd.concat where different entity dfs are stacked vertically. ChatGPT helped pinpoint why the conversion to feature collection was failing without it. Other minor refactoring.

--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -57,11 +57,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# No longer getting the warnings I was supressing here\n",
-    "# but leaving this in in case it comes back\n",
-    "#import warnings\n",
-    "#from urllib3.exceptions import InsecureRequestWarning\n",
-    "#warnings.simplefilter(\"ignore\", InsecureRequestWarning)"
+    "import warnings\n",
+    "from urllib3.exceptions import InsecureRequestWarning\n",
+    "warnings.simplefilter(\"ignore\", InsecureRequestWarning)"
    ]
   },
   {
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3ee2370f",
    "metadata": {},
    "outputs": [],
@@ -217,7 +215,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found rows to add! Proceeding to the rest of the Notebook.\n"
+      "Found rows to add:\n",
+      "\n",
+      "adds designatedAreas:          designatedArea state\n",
+      "24      Vernon (County)    MO\n",
+      "25     Madison (County)    IN\n",
+      "26  Washington (County)    IN\n",
+      "27       Kiowa (County)    KS\n",
+      "28      Greene (County)    IN\n",
+      "..                  ...   ...\n",
+      "93    San Juan (County)    UT\n",
+      "94     Lincoln (County)    NM\n",
+      "95       Otero (County)    NM\n",
+      "96      Chaves (County)    NM\n",
+      "97    Valencia (County)    NM\n",
+      "\n",
+      "[74 rows x 2 columns]\n",
+      "\n",
+      "Proceeding to the rest of the Notebook.\n"
      ]
     }
    ],
@@ -232,7 +247,38 @@
     "    print(\"Found no new Declarations to add! We're done here.\")\n",
     "else:\n",
     "    proceed = True\n",
-    "    print(\"Found rows to add! Proceeding to the rest of the Notebook.\")"
+    "    print(\"Found rows to add:\\n\")\n",
+    "    print(f\"adds designatedAreas: {adds_df[['designatedArea', 'state']]}\")\n",
+    "    print(\"\\nProceeding to the rest of the Notebook.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7dc87688",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['femaDeclarationString', 'disasterNumber', 'state', 'declarationType',\n",
+       "       'declarationDate', 'fyDeclared', 'incidentType', 'declarationTitle',\n",
+       "       'ihProgramDeclared', 'iaProgramDeclared', 'paProgramDeclared',\n",
+       "       'hmProgramDeclared', 'incidentBeginDate', 'incidentEndDate',\n",
+       "       'disasterCloseoutDate', 'tribalRequest', 'fipsStateCode',\n",
+       "       'fipsCountyCode', 'placeCode', 'designatedArea',\n",
+       "       'declarationRequestNumber', 'lastIAFilingDate', 'incidentId', 'region',\n",
+       "       'designatedIncidentTypes', 'lastRefresh', 'hash', 'id', 'Entity'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adds_df.columns"
    ]
   },
   {
@@ -261,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "433e4daa",
    "metadata": {},
    "outputs": [],
@@ -288,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "46caf1e7",
    "metadata": {},
    "outputs": [],
@@ -315,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "4cea13b1",
    "metadata": {},
    "outputs": [],
@@ -357,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b1c85969",
    "metadata": {},
    "outputs": [],
@@ -382,41 +428,8 @@
     "    get_geometries(tribal, tribal_field2, df_list)\n",
     "    get_geometries(tribal, tribal_field3, df_list)\n",
     "\n",
-    "    adds_geometries = pd.concat(df_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "7a4e4912",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['femaDeclarationString', 'disasterNumber', 'state', 'declarationType',\n",
-       "       'declarationDate', 'fyDeclared', 'incidentType', 'declarationTitle',\n",
-       "       'ihProgramDeclared', 'iaProgramDeclared', 'paProgramDeclared',\n",
-       "       'hmProgramDeclared', 'incidentBeginDate', 'incidentEndDate',\n",
-       "       'disasterCloseoutDate', 'tribalRequest', 'fipsStateCode',\n",
-       "       'fipsCountyCode', 'placeCode', 'designatedArea',\n",
-       "       'declarationRequestNumber', 'lastIAFilingDate', 'incidentId', 'region',\n",
-       "       'designatedIncidentTypes', 'lastRefresh', 'hash', 'id', 'Entity',\n",
-       "       'fipsFullCode', 'fipsTribalCode', 'COVID19', 'OBJECTID', 'Entity_2',\n",
-       "       'Full_FIPS', 'County_FIPS', 'County_Name', 'State_FIPS', 'State_Name',\n",
-       "       'State_Abbreviation', 'Tribal_FIPS', 'Tribal_Basename', 'Tribal_Name',\n",
-       "       'AIANNHFP1', 'AIANNHFP2', 'AIANNHFP3', 'AIANNHNS', 'Census_Year',\n",
-       "       'Shape__Area', 'Shape__Length', 'SHAPE'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "adds_geometries.columns"
+    "    # Ignore index is required here, else the conversion to feature collection below fails\n",
+    "    adds_geometries = pd.concat(df_list, ignore_index=True)"
    ]
   },
   {
@@ -431,21 +444,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "1306bd1f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "<class 'pandas.core.series.Series'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m proceed:\n\u001b[1;32m----> 3\u001b[0m     adds_feature_collection \u001b[38;5;241m=\u001b[39m adds_geometries\u001b[38;5;241m.\u001b[39mspatial\u001b[38;5;241m.\u001b[39mto_feature_collection()\n\u001b[0;32m      5\u001b[0m     remove_fields \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOBJECTID\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape__Area\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape__Length\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSHAPE\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      6\u001b[0m     dissolve_fields \u001b[38;5;241m=\u001b[39m [f[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m dashboard_layer\u001b[38;5;241m.\u001b[39mproperties\u001b[38;5;241m.\u001b[39mfields \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m f[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01min\u001b[39;00m remove_fields]\n",
-      "File \u001b[1;32mc:\\Program Files\\ArcGIS\\Pro\\bin\\Python\\envs\\arcgispro-py3\\Lib\\site-packages\\arcgis\\features\\geo\\_accessor.py:3326\u001b[0m, in \u001b[0;36mGeoAccessor.to_feature_collection\u001b[1;34m(self, name, drawing_info, extent, global_id_field, sanitize_columns, **kwargs)\u001b[0m\n\u001b[0;32m   3318\u001b[0m     ext \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfull_extent\n\u001b[0;32m   3319\u001b[0m     extent \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m   3320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mxmin\u001b[39m\u001b[38;5;124m\"\u001b[39m: ext[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m   3321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mymin\u001b[39m\u001b[38;5;124m\"\u001b[39m: ext[\u001b[38;5;241m1\u001b[39m],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3324\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspatialReference\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msr,\n\u001b[0;32m   3325\u001b[0m     }\n\u001b[1;32m-> 3326\u001b[0m fs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__feature_set__\n\u001b[0;32m   3327\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m fld \u001b[38;5;129;01min\u001b[39;00m fs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfields\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[0;32m   3328\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m fld[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m fs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobjectIdFieldName\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mlower():\n",
-      "File \u001b[1;32mc:\\Program Files\\ArcGIS\\Pro\\bin\\Python\\envs\\arcgispro-py3\\Lib\\site-packages\\arcgis\\features\\geo\\_accessor.py:2937\u001b[0m, in \u001b[0;36mGeoAccessor.__feature_set__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2935\u001b[0m     geom_type \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mesriGeometryPoint\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2936\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 2937\u001b[0m     geom_type \u001b[38;5;241m=\u001b[39m _geom_types[\n\u001b[0;32m   2938\u001b[0m         \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname][\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname]\u001b[38;5;241m.\u001b[39mfirst_valid_index()])\n\u001b[0;32m   2939\u001b[0m     ]\n\u001b[0;32m   2941\u001b[0m fs \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m   2942\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobjectIdFieldName\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   2943\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mglobalIdFieldName\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2948\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfeatures\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[0;32m   2949\u001b[0m }\n\u001b[0;32m   2950\u001b[0m \u001b[38;5;66;03m# Ensure all number values are 0 so errors do not occur.\u001b[39;00m\n",
-      "\u001b[1;31mKeyError\u001b[0m: <class 'pandas.core.series.Series'>"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{\"cost\": 0.074}\n"
      ]
     }
    ],
@@ -458,40 +465,6 @@
     "    dissolve_fields = [f[\"name\"] for f in dashboard_layer.properties.fields if not f[\"name\"] in remove_fields]\n",
     "\n",
     "    adds_dissolved = manage_data.dissolve_boundaries(adds_feature_collection, dissolve_fields=dissolve_fields)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "1c7f2d0b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['femaDeclarationString', 'disasterNumber', 'state', 'declarationType',\n",
-       "       'declarationDate', 'fyDeclared', 'incidentType', 'declarationTitle',\n",
-       "       'ihProgramDeclared', 'iaProgramDeclared', 'paProgramDeclared',\n",
-       "       'hmProgramDeclared', 'incidentBeginDate', 'incidentEndDate',\n",
-       "       'disasterCloseoutDate', 'tribalRequest', 'fipsStateCode',\n",
-       "       'fipsCountyCode', 'placeCode', 'designatedArea',\n",
-       "       'declarationRequestNumber', 'lastIAFilingDate', 'incidentId', 'region',\n",
-       "       'designatedIncidentTypes', 'lastRefresh', 'hash', 'id', 'Entity',\n",
-       "       'fipsFullCode', 'fipsTribalCode', 'COVID19', 'OBJECTID', 'Entity_2',\n",
-       "       'Full_FIPS', 'County_FIPS', 'County_Name', 'State_FIPS', 'State_Name',\n",
-       "       'State_Abbreviation', 'Tribal_FIPS', 'Tribal_Basename', 'Tribal_Name',\n",
-       "       'AIANNHFP1', 'AIANNHFP2', 'AIANNHFP3', 'AIANNHNS', 'Census_Year',\n",
-       "       'Shape__Area', 'Shape__Length', 'SHAPE'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "adds_geometries.columns"
    ]
   },
   {
@@ -509,14 +482,23 @@
    "execution_count": null,
    "id": "e0c16524",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'addResults': [{'objectId': 196, 'uniqueId': 196, 'globalId': None, 'success': True}, {'objectId': 197, 'uniqueId': 197, 'globalId': None, 'success': True}, {'objectId': 198, 'uniqueId': 198, 'globalId': None, 'success': True}, {'objectId': 199, 'uniqueId': 199, 'globalId': None, 'success': True}, {'objectId': 200, 'uniqueId': 200, 'globalId': None, 'success': True}, {'objectId': 201, 'uniqueId': 201, 'globalId': None, 'success': True}, {'objectId': 202, 'uniqueId': 202, 'globalId': None, 'success': True}, {'objectId': 203, 'uniqueId': 203, 'globalId': None, 'success': True}, {'objectId': 204, 'uniqueId': 204, 'globalId': None, 'success': True}, {'objectId': 205, 'uniqueId': 205, 'globalId': None, 'success': True}, {'objectId': 206, 'uniqueId': 206, 'globalId': None, 'success': True}, {'objectId': 207, 'uniqueId': 207, 'globalId': None, 'success': True}, {'objectId': 208, 'uniqueId': 208, 'globalId': None, 'success': True}, {'objectId': 209, 'uniqueId': 209, 'globalId': None, 'success': True}], 'updateResults': [], 'deleteResults': []}\n"
+     ]
+    }
+   ],
    "source": [
     "if proceed:\n",
     "    \n",
     "    adds_features = adds_dissolved.query().features\n",
     "    message = dashboard_layer.edit_features(adds_features)\n",
     "\n",
-    "    message"
+    "    for m in message[\"addResults\"]:\n",
+    "        print(m)"
    ]
   }
  ],
