--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -75,9 +75,19 @@
    "execution_count": 2,
    "id": "4041c933",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loged in as AlderMaps successfully.\n"
+     ]
+    }
+   ],
    "source": [
-    "gis = GIS(\"home\")"
+    "gis = GIS(\"home\")\n",
+    "\n",
+    "print(f\"Loged in as {gis.properties.user.username} successfully.\")"
    ]
   },
   {
@@ -109,10 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3ee2370f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Geometry and dashboard feature layers loaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "dd_id = \"d37c3c2a6f1c4586baad82828bfc3c59\"\n",
     "dd_item = gis.content.get(dd_id)\n",
@@ -126,7 +144,9 @@
     "test_id = \"edb716da51bc4f7882d13d425ad08fd2\"\n",
     "test_item = gis.content.get(test_id)\n",
     "dashboard_layer = test_item.layers[0]\n",
-    "dashboard_sdf = dashboard_layer.query().sdf"
+    "dashboard_sdf = dashboard_layer.query().sdf\n",
+    "\n",
+    "print(\"Geometry and dashboard feature layers loaded successfully.\")"
    ]
   },
   {
@@ -150,13 +170,23 @@
    "execution_count": 4,
    "id": "b9d0bef7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most recent 1000 Disaster Declarations Summaries loaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "api_url = r\"https://www.fema.gov/api/open/v2/DisasterDeclarationsSummaries?$filter=fyDeclared ge 2013&$orderby=declarationDate desc\"\n",
     "\n",
     "response = requests.get(api_url)\n",
     "data = response.json()\n",
-    "summaries_df = pd.DataFrame(data[\"DisasterDeclarationsSummaries\"])"
+    "summaries_df = pd.DataFrame(data[\"DisasterDeclarationsSummaries\"])\n",
+    "\n",
+    "print(\"Most recent 1000 Disaster Declarations Summaries loaded successfully.\")"
    ]
   },
   {
@@ -182,7 +212,15 @@
    "execution_count": 5,
    "id": "e31bd54e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entity field addition completed successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "entity_conditions = [\n",
     "    summaries_df[\"fipsCountyCode\"] != \"000\",\n",
@@ -192,7 +230,9 @@
     "\n",
     "entity_values = [\"County or Equivalent\", \"Tribal Area or Equivalent\", \"State or Equivalent\"]\n",
     "\n",
-    "summaries_df[\"Entity\"] = np.select(entity_conditions, entity_values)"
+    "summaries_df[\"Entity\"] = np.select(entity_conditions, entity_values)\n",
+    "\n",
+    "print(\"Entity field addition completed successfully.\")"
    ]
   },
   {
@@ -217,20 +257,20 @@
      "text": [
       "Found rows to add:\n",
       "\n",
-      "adds designatedAreas:          designatedArea state\n",
-      "24      Vernon (County)    MO\n",
-      "25     Madison (County)    IN\n",
-      "26  Washington (County)    IN\n",
-      "27       Kiowa (County)    KS\n",
-      "28      Greene (County)    IN\n",
-      "..                  ...   ...\n",
-      "93    San Juan (County)    UT\n",
-      "94     Lincoln (County)    NM\n",
-      "95       Otero (County)    NM\n",
-      "96      Chaves (County)    NM\n",
-      "97    Valencia (County)    NM\n",
+      "adds designatedAreas:            designatedArea state\n",
+      "24        Vernon (County)    MO\n",
+      "25       Madison (County)    IN\n",
+      "26    Washington (County)    IN\n",
+      "27         Kiowa (County)    KS\n",
+      "28        Greene (County)    IN\n",
+      "...                   ...   ...\n",
+      "1007    Anderson (County)    KY\n",
+      "1008        Bath (County)    KY\n",
+      "1009       Adair (County)    KY\n",
+      "1010       Allen (County)    KY\n",
+      "1011        Bell (County)    KY\n",
       "\n",
-      "[74 rows x 2 columns]\n",
+      "[240 rows x 2 columns]\n",
       "\n",
       "Proceeding to the rest of the Notebook.\n"
      ]
@@ -250,35 +290,6 @@
     "    print(\"Found rows to add:\\n\")\n",
     "    print(f\"adds designatedAreas: {adds_df[['designatedArea', 'state']]}\")\n",
     "    print(\"\\nProceeding to the rest of the Notebook.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "7dc87688",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['femaDeclarationString', 'disasterNumber', 'state', 'declarationType',\n",
-       "       'declarationDate', 'fyDeclared', 'incidentType', 'declarationTitle',\n",
-       "       'ihProgramDeclared', 'iaProgramDeclared', 'paProgramDeclared',\n",
-       "       'hmProgramDeclared', 'incidentBeginDate', 'incidentEndDate',\n",
-       "       'disasterCloseoutDate', 'tribalRequest', 'fipsStateCode',\n",
-       "       'fipsCountyCode', 'placeCode', 'designatedArea',\n",
-       "       'declarationRequestNumber', 'lastIAFilingDate', 'incidentId', 'region',\n",
-       "       'designatedIncidentTypes', 'lastRefresh', 'hash', 'id', 'Entity'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "adds_df.columns"
    ]
   },
   {
@@ -307,10 +318,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "433e4daa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Field additions completed successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "if proceed:\n",
     "\n",
@@ -319,7 +338,9 @@
     "    adds_df[\"fipsTribalCode\"] = adds_df[\"fipsStateCode\"] + adds_df[\"placeCode\"]\n",
     "\n",
     "    # Add & calculate COVID-19 field\n",
-    "    adds_df[\"COVID19\"] = np.where(adds_df[\"declarationTitle\"].str.contains(\"COVID-19\"), \"Show only COVID-19\", \"Show only non-COVID-19\")"
+    "    adds_df[\"COVID19\"] = np.where(adds_df[\"declarationTitle\"].str.contains(\"COVID-19\"), \"Show only COVID-19\", \"Show only non-COVID-19\")\n",
+    "\n",
+    "    print(\"Field additions completed successfully.\")"
    ]
   },
   {
@@ -334,17 +355,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "46caf1e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Field conversion to datetime completed successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "if proceed:\n",
     "\n",
     "    date_columns = [\"declarationDate\", \"incidentBeginDate\", \"incidentEndDate\", \"disasterCloseoutDate\", \"lastIAFilingDate\", \"lastRefresh\"]\n",
     "\n",
     "    for dc in date_columns:\n",
-    "        adds_df[dc] = pd.to_datetime(adds_df[dc], errors=\"coerce\")"
+    "        adds_df[dc] = pd.to_datetime(adds_df[dc], errors=\"coerce\")\n",
+    "\n",
+    "    print(\"Field conversion to datetime completed successfully.\")"
    ]
   },
   {
@@ -361,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "4cea13b1",
    "metadata": {},
    "outputs": [],
@@ -403,10 +434,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b1c85969",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Geometry incorporation completed successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "if proceed:\n",
     "\n",
@@ -429,7 +468,9 @@
     "    get_geometries(tribal, tribal_field3, df_list)\n",
     "\n",
     "    # Ignore index is required here, else the conversion to feature collection below fails\n",
-    "    adds_geometries = pd.concat(df_list, ignore_index=True)"
+    "    adds_geometries = pd.concat(df_list, ignore_index=True)\n",
+    "\n",
+    "    print(\"Geometry incorporation completed successfully.\")"
    ]
   },
   {
@@ -444,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "1306bd1f",
    "metadata": {},
    "outputs": [
@@ -452,7 +493,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "{\"cost\": 0.074}\n"
+      "{\"cost\": 0.24}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dissolve boundaries completed successfully.\n"
      ]
     }
    ],
@@ -464,7 +512,9 @@
     "    remove_fields = [\"OBJECTID\", \"Shape__Area\", \"Shape__Length\", \"SHAPE\"]\n",
     "    dissolve_fields = [f[\"name\"] for f in dashboard_layer.properties.fields if not f[\"name\"] in remove_fields]\n",
     "\n",
-    "    adds_dissolved = manage_data.dissolve_boundaries(adds_feature_collection, dissolve_fields=dissolve_fields)"
+    "    adds_dissolved = manage_data.dissolve_boundaries(adds_feature_collection, dissolve_fields=dissolve_fields)\n",
+    "\n",
+    "    print(\"Dissolve boundaries completed successfully.\")"
    ]
   },
   {
@@ -479,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e0c16524",
    "metadata": {},
    "outputs": [
@@ -487,7 +537,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'addResults': [{'objectId': 196, 'uniqueId': 196, 'globalId': None, 'success': True}, {'objectId': 197, 'uniqueId': 197, 'globalId': None, 'success': True}, {'objectId': 198, 'uniqueId': 198, 'globalId': None, 'success': True}, {'objectId': 199, 'uniqueId': 199, 'globalId': None, 'success': True}, {'objectId': 200, 'uniqueId': 200, 'globalId': None, 'success': True}, {'objectId': 201, 'uniqueId': 201, 'globalId': None, 'success': True}, {'objectId': 202, 'uniqueId': 202, 'globalId': None, 'success': True}, {'objectId': 203, 'uniqueId': 203, 'globalId': None, 'success': True}, {'objectId': 204, 'uniqueId': 204, 'globalId': None, 'success': True}, {'objectId': 205, 'uniqueId': 205, 'globalId': None, 'success': True}, {'objectId': 206, 'uniqueId': 206, 'globalId': None, 'success': True}, {'objectId': 207, 'uniqueId': 207, 'globalId': None, 'success': True}, {'objectId': 208, 'uniqueId': 208, 'globalId': None, 'success': True}, {'objectId': 209, 'uniqueId': 209, 'globalId': None, 'success': True}], 'updateResults': [], 'deleteResults': []}\n"
+      "The following features were added successfully:\n",
+      "{'objectId': 254, 'uniqueId': 254, 'globalId': None, 'success': True}\n",
+      "{'objectId': 255, 'uniqueId': 255, 'globalId': None, 'success': True}\n",
+      "{'objectId': 256, 'uniqueId': 256, 'globalId': None, 'success': True}\n",
+      "{'objectId': 257, 'uniqueId': 257, 'globalId': None, 'success': True}\n",
+      "{'objectId': 258, 'uniqueId': 258, 'globalId': None, 'success': True}\n",
+      "{'objectId': 259, 'uniqueId': 259, 'globalId': None, 'success': True}\n",
+      "{'objectId': 260, 'uniqueId': 260, 'globalId': None, 'success': True}\n",
+      "{'objectId': 261, 'uniqueId': 261, 'globalId': None, 'success': True}\n",
+      "{'objectId': 262, 'uniqueId': 262, 'globalId': None, 'success': True}\n",
+      "{'objectId': 263, 'uniqueId': 263, 'globalId': None, 'success': True}\n",
+      "{'objectId': 264, 'uniqueId': 264, 'globalId': None, 'success': True}\n",
+      "{'objectId': 265, 'uniqueId': 265, 'globalId': None, 'success': True}\n",
+      "{'objectId': 266, 'uniqueId': 266, 'globalId': None, 'success': True}\n",
+      "{'objectId': 267, 'uniqueId': 267, 'globalId': None, 'success': True}\n",
+      "{'objectId': 268, 'uniqueId': 268, 'globalId': None, 'success': True}\n",
+      "{'objectId': 269, 'uniqueId': 269, 'globalId': None, 'success': True}\n",
+      "{'objectId': 270, 'uniqueId': 270, 'globalId': None, 'success': True}\n",
+      "{'objectId': 271, 'uniqueId': 271, 'globalId': None, 'success': True}\n",
+      "{'objectId': 272, 'uniqueId': 272, 'globalId': None, 'success': True}\n"
      ]
     }
    ],
@@ -497,6 +566,7 @@
     "    adds_features = adds_dissolved.query().features\n",
     "    message = dashboard_layer.edit_features(adds_features)\n",
     "\n",
+    "    print(\"The following features were added successfully:\")\n",
     "    for m in message[\"addResults\"]:\n",
     "        print(m)"
    ]
