--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "00f171ed",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
     "else:\n",
     "    proceed = True\n",
     "    print(\"Found rows to add:\\n\")\n",
-    "    print(f\"adds designatedAreas: {adds_df[['designatedArea', 'state']]}\")\n",
+    "    print(f\"adds designatedAreas: {adds_df[['designatedArea', 'state']].head()}\")\n",
     "    print(\"\\nProceeding to the rest of the Notebook.\")"
    ]
   },
