Add send json to webhook url
It only sends an email if the script *doesn't* fail at this point; not sure if it's worth my time right now to do the extra work to have it send in all cases...

--- a/Disaster_Declarations_Dashboard_v2.ipynb
+++ b/Disaster_Declarations_Dashboard_v2.ipynb
@@ -67,12 +67,13 @@
    "id": "bf825fb0",
    "metadata": {},
    "source": [
-    "### Connect to ArcGIS"
+    "### Connect to ArcGIS\n",
+    "\"me\" and \"my_email\" variables will be used to send an email at script completion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4041c933",
    "metadata": {},
    "outputs": [
@@ -80,14 +81,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loged in as AlderMaps successfully.\n"
+      "Logged in as AlderMaps successfully.\n"
      ]
     }
    ],
    "source": [
     "gis = GIS(\"home\")\n",
+    "me = gis.properties.user.username\n",
     "\n",
-    "print(f\"Logged in as {gis.properties.user.username} successfully.\")"
+    "print(f\"Logged in as {me} successfully.\")"
    ]
   },
   {
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "00f171ed",
    "metadata": {},
    "outputs": [
@@ -255,16 +257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found rows to add:\n",
-      "\n",
-      "adds designatedAreas:          designatedArea state\n",
-      "24      Vernon (County)    MO\n",
-      "25     Madison (County)    IN\n",
-      "26  Washington (County)    IN\n",
-      "27       Kiowa (County)    KS\n",
-      "28      Greene (County)    IN\n",
-      "\n",
-      "Proceeding to the rest of the Notebook.\n"
+      "Found no new Declarations to add! We're done here.\n"
      ]
     }
    ],
@@ -275,10 +268,10 @@
     "adds_df = pre_adds[pre_adds[\"_merge\"] == \"left_only\"].drop(columns=[\"_merge\"])\n",
     "\n",
     "if adds_df.empty:\n",
-    "    proceed = False\n",
+    "    adds = False\n",
     "    print(\"Found no new Declarations to add! We're done here.\")\n",
     "else:\n",
-    "    proceed = True\n",
+    "    adds = True\n",
     "    print(\"Found rows to add:\\n\")\n",
     "    print(f\"adds designatedAreas: {adds_df[['designatedArea', 'state']]}\")\n",
     "    print(\"\\nProceeding to the rest of the Notebook.\")"
@@ -313,17 +306,9 @@
    "execution_count": 7,
    "id": "433e4daa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Field additions completed successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if proceed:\n",
+    "if adds:\n",
     "\n",
     "    # Add & calculate FIPS & Tribal FIPS fields\n",
     "    adds_df[\"fipsFullCode\"] = adds_df[\"fipsStateCode\"] + adds_df[\"fipsCountyCode\"]\n",
@@ -350,17 +335,9 @@
    "execution_count": 8,
    "id": "46caf1e7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Field conversion to datetime completed successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if proceed:\n",
+    "if adds:\n",
     "\n",
     "    date_columns = [\"declarationDate\", \"incidentBeginDate\", \"incidentEndDate\", \"disasterCloseoutDate\", \"lastIAFilingDate\", \"lastRefresh\"]\n",
     "\n",
@@ -389,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if proceed:\n",
+    "if adds:\n",
     "\n",
     "    state = \"State or Equivalent\"\n",
     "    county = \"County or Equivalent\"\n",
@@ -429,17 +406,9 @@
    "execution_count": 10,
    "id": "b1c85969",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Geometry incorporation completed successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if proceed:\n",
+    "if adds:\n",
     "\n",
     "    df_list = []\n",
     "\n",
@@ -480,24 +449,9 @@
    "execution_count": 11,
    "id": "1306bd1f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "{\"cost\": 0.24}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dissolve boundaries completed successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if proceed:\n",
+    "if adds:\n",
     "\n",
     "    adds_feature_collection = adds_geometries.spatial.to_feature_collection()\n",
     "\n",
@@ -524,43 +478,102 @@
    "execution_count": 12,
    "id": "e0c16524",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "if adds:\n",
+    "    \n",
+    "    adds_features = adds_dissolved.query().features\n",
+    "    message = dashboard_layer.edit_features(adds_features)\n",
+    "\n",
+    "    added_list = message[\"addResults\"]\n",
+    "\n",
+    "    print(\"The following features were added successfully:\")\n",
+    "    for a in added_list:\n",
+    "        print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ef9afed",
+   "metadata": {},
+   "source": [
+    "### Get webhook URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8dda730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_file = \"/arcgis/home/url.txt\"\n",
+    "\n",
+    "with open(url_file, \"r\") as file:\n",
+    "    webhook_url = file.readline().strip()\n",
+    "\n",
+    "print(\"Webhook endpoint URL retrieved successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1aab01f",
+   "metadata": {},
+   "source": [
+    "### Set up messages to send to webhook url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b9744e86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if adds:\n",
+    "    subject = \"Added new features: Triple-D Notebook\"\n",
+    "    body = \"The Triple-D (Disaster Declarations Dashboard) ArcGIS Notebook ran successfully, and the following new features were found and added:<br><br>\"\n",
+    "    attached = added_list\n",
+    "\n",
+    "else: \n",
+    "    subject = \"No new features: Triple-D Notebook\"\n",
+    "    body = \"The Triple-D (Disaster Declarations Dashboard) ArcGIS Notebook ran successfully, but no new features were found in the openFEMA Summaries to add.\"\n",
+    "    attached = \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b098396e",
+   "metadata": {},
+   "source": [
+    "### Configure webhook json and send to webhook endpoint URL\n",
+    "Obviously this doesn't send anything if the script fails at any point before the post. May put in the extra work to ensure it sends an email in all cases, but for now this is good enough."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "945fed49",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The following features were added successfully:\n",
-      "{'objectId': 254, 'uniqueId': 254, 'globalId': None, 'success': True}\n",
-      "{'objectId': 255, 'uniqueId': 255, 'globalId': None, 'success': True}\n",
-      "{'objectId': 256, 'uniqueId': 256, 'globalId': None, 'success': True}\n",
-      "{'objectId': 257, 'uniqueId': 257, 'globalId': None, 'success': True}\n",
-      "{'objectId': 258, 'uniqueId': 258, 'globalId': None, 'success': True}\n",
-      "{'objectId': 259, 'uniqueId': 259, 'globalId': None, 'success': True}\n",
-      "{'objectId': 260, 'uniqueId': 260, 'globalId': None, 'success': True}\n",
-      "{'objectId': 261, 'uniqueId': 261, 'globalId': None, 'success': True}\n",
-      "{'objectId': 262, 'uniqueId': 262, 'globalId': None, 'success': True}\n",
-      "{'objectId': 263, 'uniqueId': 263, 'globalId': None, 'success': True}\n",
-      "{'objectId': 264, 'uniqueId': 264, 'globalId': None, 'success': True}\n",
-      "{'objectId': 265, 'uniqueId': 265, 'globalId': None, 'success': True}\n",
-      "{'objectId': 266, 'uniqueId': 266, 'globalId': None, 'success': True}\n",
-      "{'objectId': 267, 'uniqueId': 267, 'globalId': None, 'success': True}\n",
-      "{'objectId': 268, 'uniqueId': 268, 'globalId': None, 'success': True}\n",
-      "{'objectId': 269, 'uniqueId': 269, 'globalId': None, 'success': True}\n",
-      "{'objectId': 270, 'uniqueId': 270, 'globalId': None, 'success': True}\n",
-      "{'objectId': 271, 'uniqueId': 271, 'globalId': None, 'success': True}\n",
-      "{'objectId': 272, 'uniqueId': 272, 'globalId': None, 'success': True}\n"
+      "Accepted\n"
      ]
     }
    ],
    "source": [
-    "if proceed:\n",
-    "    \n",
-    "    adds_features = adds_dissolved.query().features\n",
-    "    message = dashboard_layer.edit_features(adds_features)\n",
+    "payload = {\n",
+    "    \"subject\": subject,\n",
+    "    \"body\": body,\n",
+    "    \"attached\": attached\n",
+    "}\n",
     "\n",
-    "    print(\"The following features were added successfully:\")\n",
-    "    for m in message[\"addResults\"]:\n",
-    "        print(m)"
+    "response = requests.post(webhook_url, json=payload)\n",
+    "\n",
+    "print(response.text)"
    ]
   }
  ],
